--- a/addresses.html
+++ b/addresses.html
@@ -305,9 +305,9 @@
                     <div class="row">
                         <div class="col-md-9">
                             <div class="form-group">
-                                <h3>Choose Your Delivery Address:</h3>
+                                <h3 class="mb-4">Choose Your Delivery Address:</h3>
                                 <form>
-                                <div class="form-check address-erea">
+                                <div class="form-check address-erea mb-3">
                                     <input class="form-check-input" type="radio" name="address" id="prevAddressbtn1" onchange="RedirectprevAddress()"  value="option1">
                                     <label class="form-check-label" for="prevAddressbtn1">
                                         <h5>Mohandseen</h5>
@@ -315,7 +315,7 @@
                                     </label>
                                 </div>
                 
-                                <div class="form-check address-erea">
+                                <div class="form-check address-erea mb-3">
                                     <input class="form-check-input" type="radio" name="address" id="prevAddressbtn2" onchange="RedirectprevAddress()" value="option2" >
                                     <label class="form-check-label" for="prevAddressbtn2">
                                         <h5>Dokki</h5>
@@ -336,7 +336,7 @@
                                 </div>
                                 <div class="col-md-6 d-none" id="addAddress">
                                     <div class="row">
-                                        <div class="col-12 mb-20">
+                                        <div class="col-12 mb-4">
                                             <label for="">Area</label>
                                             <select class="select_option form-control" name="area" id="area"> 
                                                 <option value="">Choose Area</option>
