--- a/checkout.html
+++ b/checkout.html
@@ -440,7 +440,7 @@
                                             </li>
                                         </ul>
                                         <div class="check-btn">
-                                            <a href="order-complete.html" class="btn btn-primary w-100">Complete order</a>
+                                            <a href="addresses.html" class="btn btn-primary w-100">Complete order</a>
                                         </div>
                                     </div>
                                 </div>
