--- a/about-us.html
+++ b/about-us.html
@@ -158,7 +158,12 @@
                             <div class="cart-pro-info">
                                 <div class="cart-qty-price">
                                     <span class="quantity">1 x </span>
-                                    <span class="price-box">140 LE
+                                    <span class="price-box">140 LE </span>
+                                </div>
+                                <div class="plus-minus mt-0">
+                                    <span>
+                                        <a href="javascript:void(0)" class="minus-btn text-black">-</a>
+                                        <a href="javascript:void(0)" class="plus-btn text-black">+</a>
                                     </span>
                                 </div>
                                 <div class="delete-item-cart">
@@ -182,6 +187,12 @@
                                     <span class="price-box">15 LE
                                     </span>
                                 </div>
+                                <div class="plus-minus mt-0">
+                                    <span>
+                                        <a href="javascript:void(0)" class="minus-btn text-black">-</a>
+                                        <a href="javascript:void(0)" class="plus-btn text-black">+</a>
+                                    </span>
+                                </div>
                                 <div class="delete-item-cart">
                                     <a href="empty-cart.html"><i class="icon-trash icons"></i></a>
                                 </div>
@@ -201,6 +212,12 @@
                                 <div class="cart-qty-price">
                                     <span class="quantity">1 x </span>
                                     <span class="price-box">220 LE</span>
+                                </div>
+                                <div class="plus-minus mt-0">
+                                    <span>
+                                        <a href="javascript:void(0)" class="minus-btn text-black">-</a>
+                                        <a href="javascript:void(0)" class="plus-btn text-black">+</a>
+                                    </span>
                                 </div>
                                 <div class="delete-item-cart">
                                     <a href="empty-cart.html"><i class="icon-trash icons"></i></a>
